# remeres-map-editor

./: .clang-tidy  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-ubuntu.yml  build-windows-cmake.yml  build-windows-solution.yml  clang-lint.yml  module-boundaries.yml
data/: menubar.xml
data/creatures/: npcs.xml
docs/: ARCHITECTURE.md  REFACTORING_PLAN.md  static-data.md
scripts/: cave_generator.lua  check_module_boundaries.sh  city_lot_generator.lua  claude_agent.lua  dungeon_generator.lua  forest_generator.lua  hello_world.lua  house_visualizer.lua  island_generator.lua  item_counter.lua  map_stats_exporter.lua  maze_generator.lua  river_generator.lua  spawn_visualizer.lua  street_generator.lua
source/: CMakeLists.txt  action.cpp  action.h  actions_history_window.cpp  add_item_window.cpp  add_tileset_window.cpp  application.cpp  application.h  basemap.cpp  basemap.h  bitmap_to_map_converter.cpp  bitmap_to_map_converter.h  bitmap_to_map_window.cpp  bitmap_to_map_window.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  carpet_brush.cpp  client_assets.cpp  client_assets.h  common_windows.cpp  complexitem.h  con_vector.h  container_properties_window.cpp  copybuffer.cpp  copybuffer.h  dat_debug_view.cpp  dcbutton.cpp  doodad_brush.cpp  editor.cpp  editor.h  editor_tabs.cpp  eraser_brush.cpp  fast_noise_lite.h  filehandle.cpp  find_item_window.cpp  gl_renderer.cpp  gl_renderer.h  graphics.cpp  (+99 more)
source/app/: application.cpp  (+7 more)
tests/: CMakeLists.txt  test_con_vector.cpp  test_position.cpp
(+334 files in other folders)
